<resources>
    <string name="app_name">Connect3Game</string>
    <string name="welcome_message">Welcome to Connect 3!</string>
    <string name="enter_name">Enter your name</string>
    <string name="start_game">Start Game</string>
    <string name="congratulations_message">Congrats %1$s!</string>
    <string name="draw_message">It’s a draw!</string>
    <string name="play_again">Play Again!</string>
    <string name="splash_text">Welcome to Connect3!</string>
    <string name="quit">Quit</string>
    <string name="cell_00">Cell 00</string>
    <string name="cell_01">Cell 01</string>
    <string name="cell_02">Cell 02</string>
    <string name="cell_10">Cell 10</string>
    <string name="cell_11">Cell 11</string>
    <string name="cell_12">Cell 12</string>
    <string name="cell_20">Cell 20</string>
    <string name="cell_21">Cell 21</string>
    <string name="cell_22">Cell 22</string>
    <string name="the_game_is_a_draw">The game is a draw!</string>
    <string name="s_congrats_you_win">%s, Congrats! You win!</string>
    <string name="player_1">Player 1:</string>
    <string name="player_2">Player 2:</string>
    <string name="player1">Player1</string>
    <string name="enter_player_2_name">Player 2 Name:</string>
    <string name="enter_player_1_name">Player 1 Name</string>
    <string name="player2">Player2</string>
</resources>
