<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.connect3.GameViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_gradient"
        android:padding="16dp">

        <TextView
            android:id="@+id/player1_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_1"
            android:fontFamily="sans-serif-medium"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/player2_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_2"
            android:fontFamily="sans-serif-medium"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />


        <GridLayout
        android:id="@+id/game_grid"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alignmentMode="alignMargins"
        android:columnCount="3"
        android:rowCount="3"
        android:layout_marginTop="180dp"
        android:useDefaultMargins="true">

        <ImageView
            android:id="@+id/cell_00"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="0"
            android:background="@drawable/cell_background"
            android:contentDescription="@string/cell_00"
            android:tag="0,0"
            android:onClick="onCellClick" />

        <ImageView
            android:id="@+id/cell_01"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="1"
            android:background="@drawable/cell_background"
            android:contentDescription="@string/cell_01"
            android:tag="0,1"
            android:onClick="onCellClick" />

        <ImageView
            android:id="@+id/cell_02"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="2"
            android:background="@drawable/cell_background"
            android:contentDescription="@string/cell_02"
            android:tag="0,2"
            android:onClick="onCellClick" />

        <ImageView
            android:id="@+id/cell_10"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@drawable/cell_background"
            android:contentDescription="@string/cell_10"
            android:tag="1,0"
            android:onClick="onCellClick" />

        <ImageView
            android:id="@+id/cell_11"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="1"
            android:background="@drawable/cell_background"
            android:contentDescription="@string/cell_11"
            android:tag="1,1"
            android:onClick="onCellClick" />

        <ImageView
            android:id="@+id/cell_12"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="2"
            android:background="@drawable/cell_background"
            android:contentDescription="@string/cell_12"
            android:tag="1,2"
            android:onClick="onCellClick" />

        <ImageView
            android:id="@+id/cell_20"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="0"
            android:background="@drawable/cell_background"
            android:contentDescription="@string/cell_20"
            android:tag="2,0"
            android:onClick="onCellClick" />

        <ImageView
            android:id="@+id/cell_21"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="1"
            android:background="@drawable/cell_background"
            android:contentDescription="@string/cell_21"
            android:tag="2,1"
            android:onClick="onCellClick" />

        <ImageView
            android:id="@+id/cell_22"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="2"
            android:background="@drawable/cell_background"
            android:contentDescription="@string/cell_22"
            android:tag="2,2"
            android:onClick="onCellClick" />

    </GridLayout>

</LinearLayout>
</layout>