<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background_gradient"
    android:gravity="center"
    tools:context=".MainActivity">

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/enter_player_1_name"
android:textSize="18sp"
android:layout_gravity="center_horizontal"
    android:layout_marginBottom="8dp" />

<EditText
android:id="@+id/player1_name"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:hint="@string/player1"
android:inputType="text"
android:minHeight="48dp"
android:textColorHint="#546E7A"
android:layout_marginBottom="16dp"
    tools:ignore="VisualLintTextFieldSize" />

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:autofillHints=""
android:importantForAutofill="no"
android:text="@string/enter_player_2_name"
android:textSize="18sp"
android:layout_gravity="center_horizontal"
    android:layout_marginBottom="8dp" />

<EditText
android:id="@+id/player2_name"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:hint="@string/player2"
android:inputType="text"
android:minHeight="48dp"
android:textColorHint="#546E7A"
android:layout_marginBottom="16dp"
    tools:ignore="VisualLintTextFieldSize" />

<Button
android:id="@+id/start_game_button"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/start_game"
android:background="@drawable/button_background"
android:layout_gravity="center_horizontal"
    android:layout_marginTop="16dp" />
    </LinearLayout>
